[gd_scene load_steps=15 format=3 uid="uid://6wd0cte7pkaa"]

[ext_resource type="Texture2D" uid="uid://dycbctxxibppi" path="res://Assets/Characters/Enemies and NPC/bat/bat-sheet.png" id="1_j7be8"]
[ext_resource type="Script" uid="uid://c3lychi4qp3mm" path="res://Scripts/bat.gd" id="1_jckqh"]
[ext_resource type="Texture2D" uid="uid://txskpo8rd4sp" path="res://Assets/Props Items and VFX/enemy-death 2/spritesheet.png" id="2_wt6c1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mqh3e"]
atlas = ExtResource("2_wt6c1")
region = Rect2(0, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_y36tb"]
atlas = ExtResource("2_wt6c1")
region = Rect2(28, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_cawgt"]
atlas = ExtResource("2_wt6c1")
region = Rect2(56, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk7gk"]
atlas = ExtResource("2_wt6c1")
region = Rect2(84, 0, 28, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jckqh"]
atlas = ExtResource("1_j7be8")
region = Rect2(0, 0, 53, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_wt6c1"]
atlas = ExtResource("1_j7be8")
region = Rect2(53, 0, 53, 57)

[sub_resource type="AtlasTexture" id="AtlasTexture_50dnf"]
atlas = ExtResource("1_j7be8")
region = Rect2(106, 0, 53, 57)

[sub_resource type="SpriteFrames" id="SpriteFrames_mqh3e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqh3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y36tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cawgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk7gk")
}],
"loop": false,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jckqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50dnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wt6c1")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y36tb"]
size = Vector2(20, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cawgt"]
size = Vector2(20, 1.875)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fk7gk"]
size = Vector2(22, 17)

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_jckqh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.38419e-07, -2)
scale = Vector2(0.632075, 0.632075)
sprite_frames = SubResource("SpriteFrames_mqh3e")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 0)
shape = SubResource("RectangleShape2D_y36tb")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3, -9.0625)
shape = SubResource("RectangleShape2D_cawgt")
debug_color = Color(0.996078, 0, 0, 0.443137)

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2(4, 5)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(-1, -4.5)
shape = SubResource("RectangleShape2D_fk7gk")
debug_color = Color(1, 0, 1, 0.419608)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
